--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     body { margin: 0; overflow: hidden; font-family: 'Segoe UI', sans-serif; }
     canvas { display: block; }
 
-    /* Floating 23 */
     #corner-number {
       position: fixed;
       top: 20px;
@@ -20,76 +19,99 @@
       z-index: 10;
       user-select: none;
     }
+
+    #menu-bar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 10px 20px;
+      display: flex;
+      gap: 20px;
+      color: white;
+      z-index: 11;
+    }
+
+    #menu-bar a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      transition: color 0.3s;
+    }
+
+    #menu-bar a:hover {
+      color: #ffcc00;
+    }
   </style>
 </head>
 <body>
+  <div id="menu-bar">
+    <a href="#">Home</a>
+    <a href="#">Map</a>
+    <a href="#">Garage</a>
+    <a href="#">City (Coming Soon)</a>
+  </div>
   <div id="corner-number">23</div>
 
-  <!-- Three.js & FlyControls -->
-  <script src="https://unpkg.com/three@0.155.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.155.0/examples/js/controls/FlyControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/FlyControls.js"></script>
 
   <script>
-    // Scene setup
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x87ceeb); // Sky blue
+    try {
+      const scene = new THREE.Scene();
+      scene.background = new THREE.Color(0x87ceeb); // Sky
 
-    const camera = new THREE.PerspectiveCamera(
-      75,
-      window.innerWidth / window.innerHeight,
-      0.1,
-      1000
-    );
-    camera.position.set(0, 10, 50);
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.set(0, 10, 50);
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Lighting
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
-    scene.add(ambientLight);
-
-    const sun = new THREE.DirectionalLight(0xffffff, 1);
-    sun.position.set(50, 100, 50);
-    scene.add(sun);
-
-    // Ground / terrain (placeholder)
-    const groundGeometry = new THREE.PlaneGeometry(500, 500, 50, 50);
-    const groundMaterial = new THREE.MeshLambertMaterial({ color: 0x228b22 });
-    const ground = new THREE.Mesh(groundGeometry, groundMaterial);
-    ground.rotation.x = -Math.PI / 2;
-    scene.add(ground);
-
-    // Small garage (placeholder cube)
-    const garageGeometry = new THREE.BoxGeometry(10, 6, 8);
-    const garageMaterial = new THREE.MeshStandardMaterial({ color: 0x8b4513 });
-    const garage = new THREE.Mesh(garageGeometry, garageMaterial);
-    garage.position.set(0, 3, 0);
-    scene.add(garage);
-
-    // Controls (fly-through)
-    const controls = new THREE.FlyControls(camera, renderer.domElement);
-    controls.movementSpeed = 20;
-    controls.rollSpeed = Math.PI / 12;
-    controls.autoForward = false;
-    controls.dragToLook = true;
-
-    // Render loop
-    function animate() {
-      requestAnimationFrame(animate);
-      controls.update(0.01);
-      renderer.render(scene, camera);
-    }
-
-    animate();
-
-    // Handle resizing
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
+      const renderer = new THREE.WebGLRenderer({ antialias: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+      document.body.appendChild(renderer.domElement);
+
+      const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+      scene.add(ambientLight);
+
+      const sun = new THREE.DirectionalLight(0xffffff, 1);
+      sun.position.set(50, 100, 50);
+      scene.add(sun);
+
+      const groundGeometry = new THREE.PlaneGeometry(500, 500, 50, 50);
+      const groundMaterial = new THREE.MeshLambertMaterial({ color: 0x228b22 });
+      const ground = new THREE.Mesh(groundGeometry, groundMaterial);
+      ground.rotation.x = -Math.PI / 2;
+      scene.add(ground);
+
+      const garageGeometry = new THREE.BoxGeometry(10, 6, 8);
+      const garageMaterial = new THREE.MeshStandardMaterial({ color: 0x8b4513 });
+      const garage = new THREE.Mesh(garageGeometry, garageMaterial);
+      garage.position.set(0, 3, 0);
+      scene.add(garage);
+
+      const controls = new THREE.FlyControls(camera, renderer.domElement);
+      controls.movementSpeed = 20;
+      controls.rollSpeed = Math.PI / 12;
+      controls.autoForward = false;
+      controls.dragToLook = true;
+
+      function animate() {
+        requestAnimationFrame(animate);
+        controls.update(0.01);
+        renderer.render(scene, camera);
+      }
+
+      animate();
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
+    } catch (e) {
+      document.body.innerHTML = "<h2 style='color:red;padding:40px;'>Something went wrong loading the 3D engine.</h2>";
+      console.error(e);
+    }
   </script>
 </body>
 </html>
