--- a/index.html
+++ b/index.html
@@ -55,63 +55,62 @@
   </div>
   <div id="corner-number">23</div>
 
+  <!-- Three.js and OrbitControls -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/FlyControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/OrbitControls.js"></script>
 
   <script>
-    try {
-      const scene = new THREE.Scene();
-      scene.background = new THREE.Color(0x87ceeb); // Sky
+    const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x87ceeb); // Sky blue
 
-      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 10, 50);
+    const camera = new THREE.PerspectiveCamera(
+      75,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
+    camera.position.set(0, 20, 50);
 
-      const renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-      const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
-      scene.add(ambientLight);
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.05;
 
-      const sun = new THREE.DirectionalLight(0xffffff, 1);
-      sun.position.set(50, 100, 50);
-      scene.add(sun);
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+    scene.add(ambientLight);
 
-      const groundGeometry = new THREE.PlaneGeometry(500, 500, 50, 50);
-      const groundMaterial = new THREE.MeshLambertMaterial({ color: 0x228b22 });
-      const ground = new THREE.Mesh(groundGeometry, groundMaterial);
-      ground.rotation.x = -Math.PI / 2;
-      scene.add(ground);
+    const sun = new THREE.DirectionalLight(0xffffff, 1);
+    sun.position.set(50, 100, 50);
+    scene.add(sun);
 
-      const garageGeometry = new THREE.BoxGeometry(10, 6, 8);
-      const garageMaterial = new THREE.MeshStandardMaterial({ color: 0x8b4513 });
-      const garage = new THREE.Mesh(garageGeometry, garageMaterial);
-      garage.position.set(0, 3, 0);
-      scene.add(garage);
+    const groundGeometry = new THREE.PlaneGeometry(500, 500, 50, 50);
+    const groundMaterial = new THREE.MeshLambertMaterial({ color: 0x228b22 });
+    const ground = new THREE.Mesh(groundGeometry, groundMaterial);
+    ground.rotation.x = -Math.PI / 2;
+    scene.add(ground);
 
-      const controls = new THREE.FlyControls(camera, renderer.domElement);
-      controls.movementSpeed = 20;
-      controls.rollSpeed = Math.PI / 12;
-      controls.autoForward = false;
-      controls.dragToLook = true;
+    const garageGeometry = new THREE.BoxGeometry(10, 6, 8);
+    const garageMaterial = new THREE.MeshStandardMaterial({ color: 0x8b4513 });
+    const garage = new THREE.Mesh(garageGeometry, garageMaterial);
+    garage.position.set(0, 3, 0);
+    scene.add(garage);
 
-      function animate() {
-        requestAnimationFrame(animate);
-        controls.update(0.01);
-        renderer.render(scene, camera);
-      }
-
-      animate();
-
-      window.addEventListener('resize', () => {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      });
-    } catch (e) {
-      document.body.innerHTML = "<h2 style='color:red;padding:40px;'>Something went wrong loading the 3D engine.</h2>";
-      console.error(e);
+    function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
     }
+
+    animate();
+
+    window.addEventListener("resize", () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
   </script>
 </body>
 </html>
